<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:text="@string/payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/paymentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/payment"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="0.0"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/paymentLabel"
        app:layout_constraintTop_toTopOf="@+id/paymentLabel" />

    <TextView
        android:id="@+id/paymentCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/currency"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/paymentAmount"
        app:layout_constraintTop_toTopOf="@+id/paymentAmount" />

    <TextView
        android:id="@+id/questionMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionMark"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/paymentCurrency"
        app:layout_constraintTop_toTopOf="@+id/paymentCurrency" />

</androidx.constraintlayout.widget.ConstraintLayout>